# sais

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
firmware/components/adaptive-engine/: CMakeLists.txt  README.md  sais_integration.c  sais_integration.h
firmware/components/adaptive-engine/core/include/: adaptation_controller_psmsl.h  room_mode_detector_psmsl.h  spatial_decomposition_psmsl.h
firmware/components/adaptive-engine/core/src/: adaptation_controller_psmsl.c  room_mode_detector_psmsl.c  spatial_decomposition_psmsl.c
firmware/components/adaptive-engine/psmsl/include/: psmsl_analysis.h  psmsl_config.h  psmsl_diagnostics.h  psmsl_eigen.h  psmsl_grassmann.h  psmsl_serial_test.h
firmware/components/adaptive-engine/psmsl/src/: psmsl_analysis.c  psmsl_diagnostics.c  psmsl_eigen.c  psmsl_grassmann.c  psmsl_serial_test.c
firmware/components/adaptive-engine/psmsl/test/: test_psmsl.c
firmware/components/adaptive-engine/tools/: calibration_procedure.py  convergence_logger.py  psmsl_test.py
software/farm_twin/: README.md  pyproject.toml
software/farm_twin/examples/: farm_profile.example.json  geospatial_manifest.example.json  observation.example.json
software/farm_twin/farm_twin/: __init__.py  cards.py  gis_registry.py  graph.py  ingest_geospatial.py  ingest_observation.py  layer_registry.py  models.py  provisioning.py  queries.py  source_registry.py  storage.py
software/farm_twin/tests/: test_duplicate_ingest.py  test_graph_build.py  test_multi_sensor_measurements.py  test_storage_persistence.py  test_water_retention_card.py
(+106 files in other folders)
